--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MEDICAL NOTES</title>
+    <title>NOTE</title>
     <link rel="stylesheet" href="./dist/css/reset.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/health-book.png" type="image/png">
+    <link rel="shortcut icon" href="https://img.icons8.com/ultraviolet/40/000000/bookmark.png" type="image/png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="./dist/css/style.min.css">
@@ -19,13 +19,14 @@
     <a href="#" class="logo">
         <img src="./dist/img/logo.png" alt="">
     </a>
-    <button class="header-btn">Make an appointment</button>
+    <button class="header-btn">Make a note</button>
 </header>
 
 
 <main class="main">
     <div id="desk">
         <p class="text">No items have been added</p>
+    </div>
 
 </main>
 
